News, Last news

--- a/NewsApp/Views/Home/Index.cshtml
+++ b/NewsApp/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Главная";
 }
 
-<h1>Главная</h1>
+<div>
+    @await Component.InvokeAsync("LastNews")
+</div>
 
