--- a/NewsApp/Views/EditNews/Edit.cshtml
+++ b/NewsApp/Views/EditNews/Edit.cshtml
@@ -15,7 +15,7 @@
         <div class="form-group">
             <label class="control-label">Категория</label>
             <select name="categoryId" class="form-control">
-                <option selected="selected" disabled="disabled">Выберите категорию</option>
+                <option selected="selected">Выберите категорию</option>
                 @foreach (var category in Model.Categories)
                 {
                     <option value="@category.Id">@category.Name</option>
