--- a/NewsApp/Views/Shared/_Layout.cshtml
+++ b/NewsApp/Views/Shared/_Layout.cshtml
@@ -50,6 +50,9 @@
                     @RenderBody()
                 </main>
             </div>
+            <div class="col-3">
+                @await Component.InvokeAsync("Categories")
+            </div>
         </div>        
     </div>
 
